added direction functionality

--- a/src/styles/StaticMap.module.css
+++ b/src/styles/StaticMap.module.css
@@ -16,8 +16,8 @@
 }
 
 .selected path{
-    fill: #ff4b50;
-    stroke: #ff4b50;
+    fill: #f33;
+    stroke: #f33;
     height: 100%;
     width: 100%;
 }
