changed style and added favs

--- a/src/styles/StaticMap.module.css
+++ b/src/styles/StaticMap.module.css
@@ -16,8 +16,8 @@
 }
 
 .selected path{
-    fill: #f33;
-    stroke: #f33;
+    fill: #ffdf12;
+    stroke: #ffdf12;
     height: 100%;
     width: 100%;
 }
