--- a/src/styles/Favourites.module.css
+++ b/src/styles/Favourites.module.css
@@ -41,41 +41,12 @@
     overflow-y: scroll;
 }
 
-.bracket_container {
-    display: flex;
-    justify-content: center;
-    padding-top: 15px;
-    box-sizing: border-box;
-}
-  
-.bracket1, .bracket2 {
-    width: 25px;
-    height: 100%;
-    margin-top: -15px;
-    background-color: #286090;
-    box-sizing: border-box; /* Ensure the box model is border-box */
-}
-
-.bracket1 {
-    margin-right: 0px;
-    clip-path: polygon(
-      0% 0%, 100% 0%, 100% 5%, 30% 5%, 30% 95%, 100% 95%, 100% 100%, 0% 100%
-    );
-}
-  
-.bracket2 {
-    margin-left: 0px;
-    clip-path: polygon(
-      0% 100%, 100% 100%, 100% 0%, 0% 0%, 0% 5%, 70% 5%, 70% 95%, 0% 95%
-    );
-}
-
 
 .title {
     text-align: center;
     font-size: 13pt;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 
     color: #545454;
 }
@@ -83,15 +54,6 @@
 .title span {
     color: #f00;
     font-size: 24pt;
-}
-
-.search_button {
-    padding: 15px 20px;
-    color: white;
-    background-color: #f00;
-    border: none;
-    border-radius: 40px;
-    font-size: 18px;
 }
 
 .loader_text{
@@ -187,18 +149,17 @@
     margin-left: -40px;
 }
 
-.city_dropdown{
-    padding: 10px 5px;
-    margin-bottom: 10px;
-    color: #000;
-    background-color: #fff;
-    border: none;
-    border-radius: 40px;
+.switch_button {
+    background: none;
+    color: #007bff;
+    padding: 0;
+    margin-left: 5px;
     font-size: 14px;
-
-    border: #aaa 1px solid;
+    border: none;
+    cursor: pointer;
 }
 
-.city_dropdown:focus{
-    outline: none;
+.switch_button:hover {
+    color: #0056b3;
+    text-decoration: underline;
 }
