--- a/src/styles/Int.module.css
+++ b/src/styles/Int.module.css
@@ -44,7 +44,7 @@
 
 .title {
   text-align: center;
-  font-size: 13pt;
+  font-size: 18pt;
   font-weight: bold;
   margin-bottom: 10px;
 
@@ -61,7 +61,8 @@
 }
 
 .city_dropdown{
-  padding: 10px 5px;
+  width: 50%;
+  padding: 10px 20px;
   margin-bottom: 10px;
   color: #000;
   background-color: #fff;
