--- a/src/styles/Int.module.css
+++ b/src/styles/Int.module.css
@@ -10,16 +10,16 @@
 
   border-radius: -10px;
 
-  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
 }
 
 .header_button {
   height: 100%;
-  background:none;
+  background: none;
   border: none;
 }
 
-.header_button img{
+.header_button img {
   height: 100%;
 }
 
@@ -31,8 +31,8 @@
   padding: 40px;
   padding-top: 30px;
   display: flex;
-  justify-content:flex-start;
-  align-items:center;
+  justify-content: flex-start;
+  align-items: center;
   flex-direction: column;
 
   text-align: center;
@@ -40,7 +40,6 @@
   height: calc(100vh - 130px);
   overflow-y: scroll;
 }
-
 
 .title {
   text-align: center;
@@ -56,11 +55,11 @@
   font-size: 24pt;
 }
 
-.loader_text{
+.loader_text {
   color: #f00;
 }
 
-.city_dropdown{
+.city_dropdown {
   width: 50%;
   padding: 10px 20px;
   margin-bottom: 10px;
@@ -73,6 +72,6 @@
   border: #aaa 1px solid;
 }
 
-.city_dropdown:focus{
+.city_dropdown:focus {
   outline: none;
 }
